2009-06-15  Oliver Hader  <oliver@typo3.org>

	* Set version to 1.3.0-dev

2009-06-15  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Defined checks for TYPO3 4.2.0-4.5.0

2009-06-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Defining XCLASS only worked for TYPO3 4.2.0 but not for patch level releases
	* Cleanup: Defined proper SVN properties, fixed formatting and removed unused stuff
	* Cleanup: Fixed naming and base class inclusion

2008-04-26  Fernando Arconada  <fernando.arconada@gmail.com>

	* Initial release